samples/_failures_safe/1761297165_711628_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c92576bf.c: In function ‘main’:
./samples/SAFE/__tmp_c92576bf.c:166:5: error: expected expression at end of input
  166 |     if (
      |     ^~
./samples/SAFE/__tmp_c92576bf.c:166:5: error: expected declaration or statement at end of input
